Load the mfilter.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -310,6 +310,7 @@
 <script src="application/filters/bykey-filter.js"></script>
 <script src="application/filters/event-filter.js"></script>
 <script src="application/filters/bytes.js"></script>
+<script src="application/filters/mfilter.js"></script>
 
 <!-- Index -->
 <script src="index/_navigation-controller.js"></script>
