Display other file types in a code area.

--- a/website/app/application/core/projects/project/files/list.html
+++ b/website/app/application/core/projects/project/files/list.html
@@ -47,7 +47,7 @@
                                     </div>
                                 </div>
                                 <div ng-switch-default>
-                                    Not an image
+                                    <code style="white-space:pre-line" ng-include="fileSrc(matchingFiles[$index])"></code>
                                 </div>
                             </div>
                         </div>
