--- a/website/app/application/core/projects/project/files/view.html
+++ b/website/app/application/core/projects/project/files/view.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div ng-switch-default>
-                Not an image
+                <div hljs include="fileSrc"></div>
             </div>
         </div>
         <div class="col-lg-5">
