--- a/website/app/index.html
+++ b/website/app/index.html
@@ -15,6 +15,7 @@
     <link href="assets/css/select2/select2-bootstrap.css" rel="stylesheet">
     <link href="assets/css/jqcloud.css" rel="stylesheet">
     <link href="assets/css/tree-grid.css" rel="stylesheet">
+    <link href="assets/css/zenburn.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -86,11 +87,13 @@
 <script src="//desandro.github.io/imagesloaded/imagesloaded.pkgd.min.js"></script>
 <script src="assets/js/select2.min.js"></script>
 <script src="assets/js/TreeModel-min.js"></script>
+<script src="assets/js/highlight.pack.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.js"></script>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js"></script>-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-cookies.min.js"></script>
 <script src="assets/js/angular/angular-strap.min.js"></script>
 <script src="assets/js/angular/angular-ui.js"></script>
+<script src="assets/js/angular/angular-highlightjs.min.js"></script>
 <script src="assets/js/angular/angular-ui-router.min.0.2.11.js"></script>
 <script src="assets/js/ui-bootstrap-tpls-0.11.0.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular-sanitize.min.js'></script>
