--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -20,7 +20,7 @@
                             Welcome {{mcuser.fullname}}
                         </span>
                         <small>
-                            (Last login on {{mcuser.last_login | toDateString}})
+                            (Last login on <a ui-sref="projects.project.home"> {{mcuser.last_login | toDateString}} </a>)
                         </small>
                     </div>
                 </div>
