--- a/website/app/index.html
+++ b/website/app/index.html
@@ -9,7 +9,7 @@
     <!-- Le styles -->
     <link href="assets/css/bootstrap.flatly-3.2.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/animate.css" rel="stylesheet">
+    <!--<link href="assets/css/animate.css" rel="stylesheet">-->
     <link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="assets/css/select2/select2.css" rel="stylesheet">
     <link href="assets/css/select2/select2-bootstrap.css" rel="stylesheet">
