--- a/website/app/application/core/projects/project/files/list.html
+++ b/website/app/application/core/projects/project/files/list.html
@@ -2,164 +2,11 @@
     <div class="col-xs-12">
         <div ng-show="!sideboardExpanded"
              ng-class="{'col-xs-6': !filesExpanded, 'col-xs-12': filesExpanded}">
-            <div class="panel panel-primary">
-                <div class="panel-heading files-color home-panel-heading">
-                    <i class="fa fa-fw fa-files-o bold"></i>
-                    <span>Files ({{matchingFiles.length}})</span>
-                    <span>, {{description}}</span>
-                    <span class="pull-right">
-                        <a ng-click="filesExpanded = !filesExpanded">
-                            <i class="fa"
-                               ng-class="{'fa-expand': !filesExpanded, 'fa-compress': filesExpanded}"></i>
-                        </a>
-                    </span>
-                    <input type="text" ng-model="search.fullname"
-                           placeholder="Search files..." class="pull-right col-xs-4">
-                    <span class="add-item pull-right">
-                        <a tooltip="Add File">
-                            <i class="fa fa-plus"></i>
-                        </a>
-                    </span>
-                </div>
-                <div class="panel-body home-panel-body file-compare">
-                    <ul ng-show="loaded" class="list-unstyled">
-                        <li class="home-item"
-                            ui-draggable="true"
-                            drag="file"
-                            ng-repeat="file in files | filter:search | orderBy:'fullname' | limitTo:500 as matchingFiles" on-repeat-finished="files-loaded">
-                            <div>
-                                <a ng-click="toggleDetails(file)" style="color: black">
-                                    <i class="fa"
-                                       ng-class="{'fa-caret-right': !showDetails(file), 'fa-caret-down': showDetails(file)}"></i>
-                                </a>
-                                <a ng-click="openFile(file)">
-                                    {{file.displayname}}
-                                </a>
-                                <small class="text-muted"> {{file.size | bytes}}</small>
-                                <span class="label label-info" ng-repeat="tag in tags(file)" style="margin-right: 5px">
-                                    <i class="fa"
-                                       ng-class="'fa-' + tag.icon"
-                                       style="color: {{tag.color}}">
-                                    </i>
-                                    {{tag.name}}
-                                </span>
-                                <p>
-                                    <small class="text-muted">{{file.birthtime | toDateString}}</small>
-                                    <small class="text-muted" style="margin-left: 10px">{{file.fullname}}</small>
-                                </p>
-                                <div ng-if="showDetails(file)" style="padding-left: 0px; padding-right: 0px;">
-                                    <div class="row" style="padding-left: 0px; padding-right: 0px;">
-                                        <div class="col-xs-12" ng-switch="fileType" style="padding-left: 0px; padding-right: 0px;">
-                                            <div ng-switch-when="image">
-                                                <img class="img-responsive" ng-src="{{fileSrc(matchingFiles[$index])}}">
-                                            </div>
-                                            <div ng-switch-when="pdf">
-                                                <div class="embed-responsive embed-responsive-4by3">
-                                                    <embed class="col-xs-8 embed-responsive-item"
-                                                           ng-src="{{fileSrc(matchingFiles[$index])}}"></embed>
-                                                </div>
-                                            </div>
-                                            <div ng-switch-default style="padding-left: 0px; padding-right: 0px;">
-                                                <div ng-if="matchingFiles[$index].size < 10000" hljs
-                                                     include="fileSrc(matchingFiles[$index])" style="padding-left: 0px; padding-right: 0px;"></div>
-                                                <code ng-if="matchingFiles[$index].size > 10000 && matchingFiles[$index].size <= 2000000"
-                                                      style="white-space:pre-line" ng-include="fileSrc(matchingFiles[$index])"></code>
-                                                <div ng-if="matchingFiles[$index].size > 2000000">File too big to display</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li ng-show="matchingFiles.length === 0" class="home-item">
-                            <div>
-                                No matches.
-                            </div>
-                        </li>
-                    </ul>
-                    <div ng-show="!loaded">Loading...</div>
-                </div>
-            </div>
+            <files-list></files-list>
         </div>
         <div ng-show="!filesExpanded"
              ng-class="{'col-xs-6': !sideboardExpanded, 'col-xs-12': sideboardExpanded}">
-            <div class="panel panel-primary">
-                <div class="panel-heading sideboard-color home-panel-heading">
-                    <i class="fa fa-fw fa-clipboard bold"></i>
-                    <span>Sideboard ({{sideboardFiles.length}})</span>
-                    <span class="pull-right">
-                        <a ng-click="sideboardExpanded = !sideboardExpanded">
-                            <i class="fa"
-                               ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
-                        </a>
-                    </span>
-                    <input type="text" ng-model="sideboardSearch.fullname"
-                           placeholder="Search sideboard..." class="pull-right col-xs-4">
-                </div>
-                <div class="panel-body home-panel-body file-compare">
-                    <ul class="list-unstyled">
-                        <li class="home-item">
-                            <div ui-draggable="false"
-                                 ui-on-drop="onDrop(i, $data)">
-                                <div class="dropzone">
-                                    <h4 class="text-center">
-                                        Drop here
-                                    </h4>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="home-item"
-                            ng-repeat="file in sideboard | filter:sideboardSearch | orderBy:'fullname' as sideboardFiles" on-repeat-finished="files-loaded">
-                            <div>
-                                <a ng-click="toggleDetails(file)" style="color: black">
-                                    <i class="fa"
-                                       ng-class="{'fa-caret-right': !showDetails(file), 'fa-caret-down': showDetails(file)}"></i>
-                                </a>
-                                <a ng-click="removeFromSideboard(file)" class="pull-right">
-                                    <i class="fa fa-close"></i>
-                                </a>
-                                <a ng-click="openFile(file)">
-                                    {{file.displayname}}
-                                </a>
-                                <small class="text-muted"> {{file.size | bytes}}</small>
-                                <span class="label label-info" ng-repeat="tag in tags(file)" style="margin-right: 5px">
-                                    <i class="fa"
-                                       ng-class="'fa-' + tag.icon"
-                                       style="color: {{tag.color}}">
-                                    </i>
-                                    {{tag.name}}
-                                </span>
-                                <p>
-                                    <small class="text-muted">{{file.birthtime | toDateString}}</small>
-                                    <small class="text-muted" style="margin-left: 10px">{{file.fullname}}</small>
-                                </p>
-                                <div ng-if="showDetails(file)" style="padding-left: 0px; padding-right: 0px;">
-                                    <div class="row" style="padding-left: 0px; padding-right: 0px;">
-                                        <div class="col-xs-12" ng-switch="" on="fileType" style="padding-left: 0px; padding-right: 0px;">
-                                            <div ng-switch-when="image">
-                                                <img class="img-responsive" ng-src="{{fileSrc(sideboardFiles[$index])}}">
-                                            </div>
-                                            <div ng-switch-when="pdf">
-                                                <div class="embed-responsive embed-responsive-4by3">
-                                                    <embed class="col-xs-8 embed-responsive-item" ng-src="{{fileSrc(sideboardFiles[$index])}}"></embed>
-                                                </div>
-                                            </div>
-                                            <div ng-switch-default style="padding-left: 0px; padding-right: 0px;">
-                                                <div ng-if="sideboardFiles[$index].size < 10000" hljs
-                                                     include="fileSrc(sideboardFiles[$index])"
-                                                     style="padding-left: 0px; padding-right: 0px;"></div>
-                                                <code ng-if="sideboardFiles[$index].size > 10000 && sideboardFiles[$index].size <= 2000000"
-                                                      style="white-space:pre-line" ng-include="fileSrc(sideboardFiles[$index])"></code>
-                                                <div ng-if="sideboardFiles[$index].size > 2000000">File too big to display</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <files-sideboard></files-sideboard>
         </div>
     </div>
 </div>
