--- a/website/app/application/core/projects/project/provenance/overview.html
+++ b/website/app/application/core/projects/project/provenance/overview.html
@@ -1,14 +1,18 @@
-<div  ng-if="processes.length ==0">
-    <p class="text-center">No processes created under project {{project.name}}</p>
-</div>
-<div ng-if="processes.length !==0" class="row">
-    <div class="row">
-        <div class="col-sm-offset-2 col-sm-8" style="overflow-x: auto;">
-            <overview-process-list></overview-process-list>
+<div class="row">
+    <div class="col-xs-12">
+        <div ng-show="!sideboardExpanded"
+             ng-class="{'col-xs-6': !listExpanded, 'col-xs-12': listExpanded}">
+            <processes-list></processes-list>
         </div>
-
+        <div ng-show="!listExpanded"
+             ng-class="{'col-xs-6': !sideboardExpanded, 'col-xs-12': sideboardExpanded}">
+            <processes-sideboard></processes-sideboard>
+        </div>
     </div>
-    <hr>
+</div>
+
+<div ng-if="false" class="row">
+
     <div class="row" style="float:right">
         <div class="circle-indication"></div>
         <p>process</p>
@@ -48,7 +52,5 @@
                 </button>
             </div>
         </div>
-
     </div>
 </div>
-
