--- a/website/app/application/core/projects/project/home/directives/home-sample-details.html
+++ b/website/app/application/core/projects/project/home/directives/home-sample-details.html
@@ -2,7 +2,30 @@
     <div ng-if="sample.description">
         Description: {{sample.description}}
     </div>
-    <div ng-if="sample.properties['composition']">
-        Composition: {{sample.properties.composition}}
+
+    <div style="margin-top: -15px;" class="row  sample-details">
+        <div class="col-sm-4">
+            <b ng-show="sample.properties.composition.unit">Composition:
+                <small>({{sample.properties.composition.unit}})</small>
+            </b>
+            <ul class="list-group">
+                <li class="list-group-item "
+                    ng-repeat="each in sample.properties.composition.value">
+                    {{each.element}} <span class="pull-right">{{each.value}}</span>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-8">
+            <b>Properties:</b>
+            <ul class="list-group scroll-bar">
+                <li class="list-group-item"
+                    ng-repeat="(key, value) in sample.properties | chopComposition as properties">{{key}}
+                    <span style="float: right;">{{value.value}} {{value.unit}}</span></li>
+            </ul>
+        </div>
+    </div>
+    <div style="margin-top: -10px;" class="row">
+        <b>Notes:</b>
+        <textarea class="form-control" style="height:40px; width:100%">This is a text wrapping ....</textarea>
     </div>
 </div>
