--- a/website/app/application/core/projects/project/files/files-sideboard.html
+++ b/website/app/application/core/projects/project/files/files-sideboard.html
@@ -24,12 +24,11 @@
                 </div>
             </li>
             <li class="home-item"
+                ng-click="toggleDetails(file)"
                 ng-repeat="file in sideboard | filter:sideboardSearch | orderBy:'fullname' as sideboardFiles" on-repeat-finished="files-loaded">
                 <div>
-                    <a ng-click="toggleDetails(file)" style="color: black">
-                        <i class="fa"
-                           ng-class="{'fa-caret-right': !showDetails(file), 'fa-caret-down': showDetails(file)}"></i>
-                    </a>
+                    <i class="fa"
+                       ng-class="{'fa-caret-right': !showDetails(file), 'fa-caret-down': showDetails(file)}"></i>
                     <a ng-click="removeFromSideboard(file)" class="pull-right">
                         <i class="fa fa-close"></i>
                     </a>
