--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -16,12 +16,11 @@
     <div class="panel-body home-panel-body">
         <ul class="list-unstyled">
             <li class="home-item"
+                ng-click="toggleDetails($index)"
                 ng-repeat="sample in project.samples | filter:search | event:project.date : project.nextdate as samples">
                 <div>
-                    <a ng-click="toggleDetails($index)" style="color: black">
-                        <i class="fa"
-                           ng-class="{'fa-caret-right': !showDetails($index), 'fa-caret-down': showDetails($index)}"></i>
-                    </a>
+                    <i class="fa"
+                       ng-class="{'fa-caret-right': !showDetails($index), 'fa-caret-down': showDetails($index)}"></i>
                     {{sample.owner}} created <a ui-sref="projects.project.samples.overview">
                         {{sample.name | truncate: 25 : '...':true}}</a>
                     <p>
