--- a/website/app/application/core/projects/project/provenance/processes-sideboard.html
+++ b/website/app/application/core/projects/project/provenance/processes-sideboard.html
@@ -24,12 +24,11 @@
                 </div>
             </li>
             <li class="home-item"
+                ng-click="openClose(process)"
                 ng-repeat="process in sideboard | filter:sideboardSearch | orderBy:'name' as sideboardItems">
                 <div>
-                    <a ng-click="openClose(process)" style="color: black">
-                        <i class="fa"
-                           ng-class="{'fa-caret-right': !process.showDetails, 'fa-caret-down': process.showDetails}"></i>
-                    </a>
+                    <i class="fa"
+                       ng-class="{'fa-caret-right': !process.showDetails, 'fa-caret-down': process.showDetails}"></i>
                     <a ng-click="removeFromSideboard(process)" class="pull-right">
                         <i class="fa fa-close"></i>
                     </a>
