--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -22,15 +22,18 @@
                         <i class="fa"
                            ng-class="{'fa-caret-right': !showDetails($index), 'fa-caret-down': showDetails($index)}"></i>
                     </a>
-                    {{sample.owner}} created <a ui-sref="projects.project.samples.overview">
-                        {{sample.name | truncate: 25 : '...':true}}</a>
-                    <p>
-                        <small class="text-muted">{{sample.birthtime | toDateString}}</small>
-                        <small ng-if="sample.properties.composition.value.length !== 0" style="padding-left: 30px;" class="text-muted">Composition({{sample.properties.composition.unit}}) :
-                            <span  class="text-muted" style="padding-left: 5px;" ng-repeat="each in sample.properties.composition.value">{{each.element}} -{{each.value}}</span>
-                        </small>
-                        <small ng-if="sample.properties.composition.value.length === 0" style="padding-left: 30px;" class="text-muted">Composition : None</small>
+                    <a ui-sref="projects.project.samples.overview"> {{sample.name | truncate: 25 : '...':true}} </a>
 
+                    <p>
+                        <small  ng-if="sample.properties.composition.value.length !== 0">
+                            Composition({{sample.properties.composition.unit}}) :
+                            <span style="padding-left: 5px;" ng-repeat="each in sample.properties.composition.value">{{each.element}} -{{each.value}}</span>
+                        </small>
+                        <small ng-if="sample.properties.composition.value.length === 0">
+                            Composition : None
+                        </small>
+                        <small style="padding-left: 10px;"  class="text-muted">{{sample.birthtime | toDateString}}</small>
+                        <small class="text-muted" style="padding-left: 10px;">{{sample.owner}}</small>
                     </p>
                     <div ng-show="showDetails($index)">
                         <home-sample-details sample="sample"></home-sample-details>
