--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -25,14 +25,15 @@
                     <a ui-sref="projects.project.samples.overview"> {{sample.name | truncate: 25 : '...':true}} </a>
 
                     <p>
-                        <small  ng-if="sample.properties.composition.value.length !== 0">
+                        <small ng-if="sample.properties.composition.value.length !== 0">
                             Composition({{sample.properties.composition.unit}}) :
                             <span style="padding-left: 5px;" ng-repeat="each in sample.properties.composition.value">{{each.element}} -{{each.value}}</span>
                         </small>
                         <small ng-if="sample.properties.composition.value.length === 0">
                             Composition : None
                         </small>
-                        <small style="padding-left: 10px;"  class="text-muted">{{sample.birthtime | toDateString}}</small>
+                        <small style="padding-left: 10px;" class="text-muted">{{sample.birthtime | toDateString}}
+                        </small>
                         <small class="text-muted" style="padding-left: 10px;">{{sample.owner}}</small>
                     </p>
                     <div ng-show="showDetails($index)">
