--- a/website/app/application/core/projects/project/home/directives/home-sample-details.html
+++ b/website/app/application/core/projects/project/home/directives/home-sample-details.html
@@ -26,6 +26,6 @@
     </div>
     <div style="margin-top: -10px;" class="row">
         <b>Notes:</b>
-        <textarea class="form-control" style="height:40px; width:100%">This is a text wrapping ....</textarea>
+        <textarea ng-model="sample.notes" class="form-control" style="height:40px; width:100%" disabled></textarea>
     </div>
 </div>
