--- a/website/app/application/core/projects/project/home/directives/home-note-details.html
+++ b/website/app/application/core/projects/project/home/directives/home-note-details.html
@@ -1,3 +1,4 @@
 <div class="row">
-    <b>Note:</b><div ta-bind ng-model="note.note"></div>
+    <b>Note:</b>
+    <div  style="border: 0.1px solid lightgrey;width:100%;padding: 5px;" ta-bind ng-model="note.note"></div>
 </div>
