--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -14,13 +14,15 @@
                 <i class="fa fa-fw fa-plus"></i>
             </a>
         </span>
-
     </div>
     <div class="panel-body home-panel-body">
         <ul class="list-unstyled">
             <li class="home-item"
+                ng-click="toggleDetails($index)"
                 ng-repeat="review in project.reviews | filter:search | event: project.date: project.nextdate as reviews">
                 <div>
+                    <i class="fa"
+                       ng-class="{'fa-caret-right': !showDetails($index), 'fa-caret-down': showDetails($index)}"></i>
                     <i class="fa fa-fw fa-user fa-2x"></i> {{review.author}} commented on
                     <a ui-sref="projects.project.reviews.edit({'review_id': review.id, 'status': review.status})">
                         {{review.title | truncate: 25 : '...':true}}</a>
@@ -28,6 +30,9 @@
                     <p>
                         <small class="text-muted">{{review.mtime | toDateString}}</small>
                     </p>
+                    <div ng-show="showDetails($index)">
+                        <home-review-details review="review"></home-review-details>
+                    </div>
                 </div>
             </li>
             <li ng-show="reviews.length === 0" class="home-item">
