--- a/website/app/index.html
+++ b/website/app/index.html
@@ -204,6 +204,7 @@
 <script src="application/core/projects/project/home/directives/home-tasks-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-tags-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-note-details.js"></script>
+<script src="application/core/projects/project/home/directives/home-review-details.js"></script>
 <script src="application/core/projects/project/files/files.js"></script>
 <script src="application/core/projects/project/files/overview.js"></script>
 <script src="application/core/projects/project/files/list.js"></script>
