Add expand contract to all windows.

--- a/website/app/application/core/projects/project/files/files-list.html
+++ b/website/app/application/core/projects/project/files/files-list.html
@@ -3,7 +3,7 @@
         <i class="fa fa-fw fa-files-o bold"></i>
         <span>Files ({{matchingFiles.length}})</span>
         <span>, {{description}}</span>
-        <span class="pull-right">
+        <span class="pull-right expand-contract">
             <a ng-click="filesExpanded = !filesExpanded">
                 <i class="fa"
                    ng-class="{'fa-expand': !filesExpanded, 'fa-compress': filesExpanded}"></i>
