--- a/website/app/application/core/projects/project/files/files-sideboard.html
+++ b/website/app/application/core/projects/project/files/files-sideboard.html
@@ -2,7 +2,7 @@
     <div class="panel-heading sideboard-color home-panel-heading">
         <i class="fa fa-fw fa-clipboard bold"></i>
         <span>Sideboard ({{sideboardFiles.length}})</span>
-        <span class="pull-right">
+        <span class="pull-right expand-contract">
             <a ng-click="sideboardExpanded = !sideboardExpanded">
                 <i class="fa"
                    ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
