--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -3,7 +3,11 @@
         <div class="panel-heading help-color">
             <i class="fa fa-fw fa-book"></i>
             <span>Userguide</span>
-            <a ng-click="close()" class="pull-right"><i class="fa fa-fw fa-close"></i></a>
+            <a ng-click="close()" class="pull-right bar-control"><i class="fa fa-fw fa-close"></i></a>
+            <a ng-click="sideboardExpanded = !sideboardExpanded" class="pull-right bar-control">
+                <i class="fa"
+                   ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
+            </a>
         </div>
         <div class="panel-body home-panel-body">
             <div class="no-content">
