--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -7,6 +7,11 @@
             </a>
             ({{fileCount | number}})
         </span>
+        <a ng-click="sideboardExpanded = !sideboardExpanded"
+           class="pull-right bar-control">
+            <i class="fa"
+               ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
+        </a>
         <input type="text" ng-model="search" class="pull-right col-xs-4"
                placeholder="Search files...">
         <span class="add-item pull-right">
