--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -7,6 +7,11 @@
             </a>
             ({{reviews.length}})
         </span>
+        <a ng-click="sideboardExpanded = !sideboardExpanded"
+           class="pull-right bar-control">
+            <i class="fa"
+               ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
+        </a>
         <input type="text" ng-model="search" class="pull-right col-xs-4"
                placeholder="Search reviews...">
         <span class="add-item pull-right">
@@ -14,7 +19,6 @@
                 <i class="fa fa-fw fa-plus"></i>
             </a>
         </span>
-
     </div>
     <div class="panel-body home-panel-body">
         <ul class="list-unstyled">
