--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -5,6 +5,11 @@
             <a ui-sref="projects.project.samples.overview">Samples</a>
             ({{samples.length}})
         </span>
+        <a ng-click="sideboardExpanded = !sideboardExpanded"
+           class="pull-right bar-control">
+            <i class="fa"
+               ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
+        </a>
         <input type="text" ng-model="search.name"
                placeholder="Search samples..." class="pull-right col-xs-4">
         <span class="add-item pull-right">
@@ -21,16 +26,18 @@
                 <div>
                     <i class="fa"
                        ng-class="{'fa-caret-right': !showDetails($index), 'fa-caret-down': showDetails($index)}"></i>
-                     <a ui-sref="projects.project.samples.overview"> {{sample.name | truncate: 25 : '...':true}} </a>
+                    <a ui-sref="projects.project.samples.overview"> {{sample.name | truncate: 25 : '...':true}} </a>
                     <p>
                         <small ng-if="sample.properties.composition.value.length !== 0">
                             Composition({{sample.properties.composition.unit}}) :
-                            <span style="padding-left: 5px;" ng-repeat="each in sample.properties.composition.value">{{each.element}} -{{each.value}}</span>
+                            <span style="padding-left: 3px; "ng-repeat="each in sample.properties.composition.value">{{each.element}} -{{each.value}}</span>
                         </small>
+                    </p>
+                    <p>
                         <small ng-if="sample.properties.composition.value.length === 0">
                             Composition : None
                         </small>
-                        <small style="padding-left: 10px;" class="text-muted">{{sample.birthtime | toDateString}}
+                        <small class="text-muted">{{sample.birthtime | toDateString}}
                         </small>
                         <small class="text-muted" style="padding-left: 10px;">{{sample.owner}}</small>
                     </p>
