--- a/website/app/application/core/projects/project/files/files-list.html
+++ b/website/app/application/core/projects/project/files/files-list.html
@@ -3,12 +3,11 @@
         <i class="fa fa-fw fa-files-o bold"></i>
         <span>Files ({{matchingFiles.length}})</span>
         <span>, {{description}}</span>
-        <span class="pull-right expand-contract">
-            <a ng-click="filesExpanded = !filesExpanded">
-                <i class="fa"
-                   ng-class="{'fa-expand': !filesExpanded, 'fa-compress': filesExpanded}"></i>
-            </a>
-        </span>
+        <a ng-click="filesExpanded = !filesExpanded"
+           class="pull-right bar-control">
+            <i class="fa"
+               ng-class="{'fa-expand': !filesExpanded, 'fa-compress': filesExpanded}"></i>
+        </a>
         <input type="text" ng-model="search.fullname"
                placeholder="Search files..." class="pull-right col-xs-4">
         <span class="add-item pull-right">
