Track expansion across projects. Start moving expansion code into a service so we can remember and also apply it to the home page.

--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -4,12 +4,12 @@
             <i class="fa fa-fw fa-book"></i>
             <span>Userguide</span>
             <a ng-click="close()" class="pull-right bar-control"><i class="fa fa-fw fa-close"></i></a>
-            <a ng-click="sideboardExpanded = !sideboardExpanded" class="pull-right bar-control">
+            <a ng-click="toggleExpand()" class="pull-right bar-control">
                 <i class="fa"
-                   ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
+                   ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
             </a>
         </div>
-        <div class="panel-body home-panel-body">
+        <div class="panel-body home-panel-body no-max-height">
             <div class="no-content">
                 userguide
                 <div class="col-xs-6">
