--- a/website/app/index.html
+++ b/website/app/index.html
@@ -30,6 +30,7 @@
     <link href="assets/css/angular-toastr.css" rel="stylesheet">
     <link href="assets/css/vis.css" rel="stylesheet">
     <link href="assets/css/fullcalendar.css" rel="stylesheet">
+    <link href="assets/css/nsPopover.css" rel="stylesheet">
 
     <!-- Application style sheet -->
     <link href="style-3.css" rel="stylesheet">
@@ -120,6 +121,7 @@
 <script src="assets/js/moment.min.js"></script>
 <script src="assets/js/calendar.js"></script>
 <script src="assets/js/fullcalendar.js"></script>
+<script src="assets/js/angular/nsPopover.js"></script>
 
 
 <!------------------------------ Application --------------------------->
