notes view home page

--- a/website/app/application/core/projects/project/home/directives/home-note-details.html
+++ b/website/app/application/core/projects/project/home/directives/home-note-details.html
@@ -1,4 +1,4 @@
 <div class="row">
-    <b>Note:</b>
-    <div  style="border: 0.1px solid lightgrey;width:100%;padding: 5px;" ta-bind ng-model="note.note"></div>
+    <b>Notes:</b>
+    <div ta-bind="text" ng-model="note.note" ta-readonly='disabled'></div>
 </div>
